# feedback-analyzer

./: .gitignore  README.md  pyproject.toml
notebooks/: agent_toy_example.ipynb  end_to_end_example.ipynb  extraction_example.ipynb  multilabel_classification_example.ipynb  sentiment_analysis_example.ipynb  summarization_example.ipynb  theme_derivation_example.ipynb
src/feedback_analyzer/: batch_runner.py  excerpt_extraction.py  models_common.py  multilabel_classification.py  sentiment_analysis.py  single_input_task.py  summarization.py  theme_derivation.py  utils.py
