[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "feedback_analyzer"
version = "0.1.0"
requires-python = ">= 3.10.8"
dependencies = [
    'pydantic>=2.5.2',
    'python-dotenv>=1.0.0',
    'PyYAML>=5.4.1',
    'numpy>=1.23.5',
    'anthropic>=0.30.0',
]

[project.optional-dependencies]
nb = [
    'ipython>=8.12.3',
    'ipykernel>=6.16.2',
    'pyarrow>=12.0.0',
    'matplotlib>=3.6.2',
    'nest_asyncio>=1.5.6',
    'pandas>=2.0.1',
    'seaborn>=0.13.2',
]